@@ -1,5 +1,11 @@
 2004-10-08 Bart Hakvoort  <gparted@users.sf.net>
 
+	* include/Frame_Resizer_Base.h: removed inheritance from sigc::trackable. (this is already done by Glib::Object)
+	* src/Dialog_Partition_Copy.cc,
+	  src/Frame_Resizer_Base.cc: fixed issues with resizing reiserfs filesystems.
+
+2004-10-08 Bart Hakvoort  <gparted@users.sf.net>
+
 	* src/Dialog_About.cc: updated translatorcomment.
 
 2004-10-08 Bart Hakvoort  <gparted@users.sf.net>
